[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["JB"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
django = "4.1"
black = "21.12b0"
pillow = "^10.2.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
requests = "^2.31.0"
pytz = "^2024.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
sentry-sdk = {extras = ["django"], version = "^1.44.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
